[package]
name = "bevyMapGS"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["default_app", "dynamic_linking", "debug", "wayland"] }
serde = { version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"


[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 256


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
